Ignore local config

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+	"site-url": "https://community.knownly.net",
     "knownly-website-folder": "/users/dwight/dropbox/apps/knownly.net/community.knownly.net",
     "provider": "knownly"
 }
